--- a/src/main/resources/templates/productos/create.html
+++ b/src/main/resources/templates/productos/create.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
+
 
 <head>
 
@@ -10,51 +11,20 @@
 
   <title>Spring eCommerce</title>
 
-
   <!-- Bootstrap core CSS -->
-  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-   <link href="../css/heroic-features.css" rel="stylesheet">
+  <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
+  <link rel="stylesheet" th:href="@{/css/style.css}">
+
 
 </head>
 
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">Spring eCommerce</a>
-
-      <form class="form-inline my-2 my-lg-0" method="post"
-      action="#">
-      <input class="form-control mr-sm-2" type="search"
-      placeholder="Buscar" aria-label="Search" name="nombre"
-      autocomplete="off">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-    </form>
-
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown"><a
-          class="nav-link dropdown-toggle" href="#"
-          id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false"> ADMIN </a>
-          <div class="dropdown-menu"
-          aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Productos</a> <a
-          class="dropdown-item" href="#">Ordenes</a> <a
-          class="dropdown-item" href="#">Usuarios</a> <a
-          class="dropdown-item" href="#">Salir</a>
-        </div></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+  <div th:include="admin/template_admin.html::header"></div>
 
 <!-- Page Content -->
 <div class="container">
@@ -65,13 +35,14 @@
     Spring eCommerce <small>Productos</small>
   </h1>
 
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+  <ol class="breadcrumb" style="background-color: transparent;">
+    <li class="breadcrumb-item"><a style="color: rgb(107, 107, 107);" href="/admin">Home</a></li>
+    <li class="breadcrumb-item"><a style="color: rgb(107, 107, 107);" href="/productos">Ver Productos</a></li>
     <li class="breadcrumb-item active">Crear Productos</li>
   </ol>
 
   <h2>Crear Producto</h2>
-  <form class="form-horizontal" action="#" method="post" enctype="multipart/form-data">
+  <form class="form-horizontal" th:action="@{/productos/save}" method="post" enctype="multipart/form-data">
     <div class="form-group">
       <label class="control-label col-sm-2" for="nombre">Nombre:</label>
       <div class="col-sm-10">
@@ -89,10 +60,10 @@
     </div>
 
     <div class="form-group">
-      <label class="control-label col-sm-2" for="cantidad">Cantidad:</label>
+      <label class="control-label col-sm-2" for="cant">Cantidad:</label>
       <div class="col-sm-10">
-        <input type="number" class="form-control" id="cantidad"
-        name="cantidad" placeholder="Ingrese la cantidad del producto"
+        <input type="number" class="form-control" id="cant"
+        name="cant" placeholder="Ingrese la cantidad del producto"
         required autocomplete="off">
       </div>
     </div>
@@ -126,16 +97,13 @@
 <!-- /.container -->
 
 <!-- Footer -->
-<footer class="py-5 bg-dark">
-  <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Spring eCommerce 2020</p>
-  </div>
-  <!-- /.container -->
-</footer>
+<div th:include="admin/template_admin.html::footer"></div>
 
 <!-- Bootstrap core JavaScript -->
-<script src="../vendor/jquery/jquery.min.js"></script>
-<script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
+<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/vendor/script.js}"></script>
+
 
 </body>
 
