--- a/src/main/resources/templates/admin/template_admin.html
+++ b/src/main/resources/templates/admin/template_admin.html
@@ -1,40 +1,40 @@
 
   <!-- Navigation -->
+<div th:fragment="banner_top">
+  <div style="height: 10vw; background-color: rgb(230, 179, 27);"></div>
+</div>
+
+
   <div th:fragment="header">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a class="navbar-brand" href="@{/admin}">Spring eCommerce</a>
-  
-        <form class="form-inline my-2 my-lg-0" method="post"
-        action="#">
-        <input class="form-control mr-sm-2" type="search"
-        placeholder="Buscar" aria-label="Search" name="nombre"
-        autocomplete="off">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-      </form>
-  
-  
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"><a class="nav-link"
-            href="carrito.html">Carrito</a></li>
-            <li class="nav-item"><a class="nav-link"
-              href="login.html">Login</a></li>
-              <li class="nav-item dropdown"><a
-                class="nav-link dropdown-toggle" href="#"
-                id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false"> ADMIN </a>
-                <div class="dropdown-menu"
-                  aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="">Productos</a> 
-                </div></li>
-            </ul>
-          </div>
-        </div>
+    <header>
+        
+    </header>
+    <main>
+      <nav class="navbar_sticky d-flex" id="target" style="background-color: rgb(230, 179, 27);">
+          <h2 ><a id="nav_text" href="/admin" style="font-size: larger; font-weight: 600;">SportFit</a></h2>
+          <ul class="d-flex justify-content-center">
+            <li class="nav-item dropdown"><a
+              class="nav-link dropdown-toggle" href="#"
+              id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false"> ADMIN </a>
+              <div class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink">
+                <a class="dropdown-item" th:href="@{/productos}">Productos</a> 
+                <a class="dropdown-item" href="#">Ordenes</a> 
+                <a class="dropdown-item" href="#">Usuarios</a> 
+                <a class="dropdown-item" href="#">Salir</a>
+              </div></li>
+              
+              <li class="px-4">
+                <form action="" method="get">
+                  <input type="search" name="search" class="search" id="search" placeholder="Buscar...">
+                  <button type="submit" class="btn btn-outline-light btn-sm"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                  </svg></button>
+                </form>
+              </li>
+          </ul>
       </nav>
   
 
@@ -44,14 +44,15 @@
 
 
     <!-- Footer -->
+    </main>
 
     <div th:fragment="footer">
 
-      <footer class="py-5 bg-dark">
-        <div class="container">
-          <p class="m-0 text-center text-white">Copyright &copy; Spring eCommerce 2021</p>
-        </div>
-        <!-- /.container -->
-      </footer>
+      <footer class="py-5" style="background-color: rgb(230, 179, 27);">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; SportFit Store 2023</p>
+    </div>
+    <!-- /.container -->
+  </footer>
 
     </div>
