--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -86,11 +86,11 @@
       <!-- Page Features -->
       <div class="row text-center">
 
-        <div class="col-lg-3 col-md-6 mb-4">
+        <div th:each="producto:${productos}" class="col-lg-3 col-md-6 mb-4">
           <div class="card h-100">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+            <img class="card-img-top" th:src="@{/images/{img}(img=${producto.imagen})}" alt="">
             <div class="card-body">
-              <p class="card-text">Nombre del producto.</p>
+              <p th:text="${producto.nombre}" class="card-text"></p>
             </div>
             <div class="card-footer">
               <a href="productohome.html" class="btn btn-warning">Ver producto</a>
@@ -98,40 +98,7 @@
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card h-100">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-            <div class="card-body">
-              <p class="card-text">Nombre del producto.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-warning">Ver producto</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card h-100">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-            <div class="card-body">
-              <p class="card-text">Nombre del producto.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-warning">Ver producto</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-6 mb-4">
-          <div class="card h-100">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
-            <div class="card-body">
-              <p class="card-text">Nombre del producto.</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-warning">Ver producto</a>
-            </div>
-          </div>
-        </div>
+       
 
       </div>
       <!-- /.row -->
