Vista de detalles del producto para usuarios

--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Spring eCommerce</title>
+  <title>SportFit Store</title>
 
 
   <!-- Bootstrap core CSS -->
@@ -47,7 +47,7 @@
       
   </header>
   <main>
-    <nav class="navbar_sticky d-flex" id="target" style="background-color: rgb(230, 179, 27);">
+    <nav class="navbar_sticky d-flex" id="target" style="background-color: rgb(230, 179, 27); z-index: 3;">
         <h2 id="nav_text">SportFit</h2>
         <ul class="d-flex justify-content-center">
           <li class="nav-item dropdown"><a
@@ -93,7 +93,7 @@
               <p th:text="${producto.nombre}" class="card-text"></p>
             </div>
             <div class="card-footer">
-              <a href="productohome.html" class="btn btn-warning">Ver producto</a>
+              <a th:href="@{/productohome/{id} (id=${producto.id})}" class="btn btn-warning">Ver producto</a>
             </div>
           </div>
         </div>
