--- a/src/main/resources/templates/productos/show.html
+++ b/src/main/resources/templates/productos/show.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Spring eCommerce</title>
+  <title>SportFit Store</title>
 
 
   <!-- Bootstrap core CSS -->
@@ -35,7 +35,7 @@
 
   <!-- Page Heading/Breadcrumbs -->
   <h1 class="mt-4 mb-3">
-    Spring eCommerce <small>Productos</small>
+    SportFit Store <small>Productos</small>
   </h1>
 
   <ol class="breadcrumb" style="background-color: transparent;">
