--- a/src/main/resources/templates/usuario/template_user.html
+++ b/src/main/resources/templates/usuario/template_user.html
@@ -8,7 +8,7 @@
   <div th:fragment="header">
 
     <main>
-      <nav class="navbar_sticky d-flex" id="target" style="background-color: rgb(230, 179, 27);">
+      <nav class="navbar_sticky d-flex" id="target" style="background-color: rgb(230, 179, 27);  z-index: 3;">
           <h2 id="nav_text">SportFit</h2>
           <ul class="d-flex px-0 justify-content-center">
                        
