--- a/src/main/resources/templates/usuario/resumenorden.html
+++ b/src/main/resources/templates/usuario/resumenorden.html
@@ -85,7 +85,7 @@
 
           <ul class="list-group">
             <li class="list-group-item"><h5>Total: <span th:text="${orden.total}"></span></h5></li>
-            <a href="#" class="btn btn-dark">Generar</a>
+            <a th:href="@{saveOrder}" class="btn btn-dark">Generar</a>
           </ul>
         </div>
       </div>
