--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -52,7 +52,7 @@
         <ul class="d-flex px-0 justify-content-center">
                      
             <li class="px-4">
-              <form action="" method="get">
+              <form th:action="@{/search}" method="get">
                 <input type="search" name="search" class="search" id="search" placeholder="¿Que estas buscando?" style="width: 50vw; height:35px;;background-color: rgba(255, 255, 255, 0.2);">
                 <button type="submit" class="btn btn-outline-light btn-sm"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                   <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
