Funcionalidad login administrador

--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -65,7 +65,7 @@
               </svg></a>
             </li>
             <li class="px-4">
-              <a href="#" id="nav_text">Login</a>
+              <a th:href="@{/login}" id="nav_text">Login</a>
             </li>
         </ul>
     </nav>
