--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -28,7 +28,7 @@
     <ul class="d-flex px-0 justify-content-center">
                  
         <li class="px-4">
-          <a href="#" id="nav_text">Login <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+          <a th:href="@{/login}" id="nav_text">Login <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
           </svg></a>
         </li>
